...

  return (
    <TouchableComponent
      testID={testID}
      accessibilityRole="button"
      accessibilityLabel={
        accessibilityLabel ?? (icon === 'close' ? 'Close' : icon === 'chevron-forward' ? 'Continue' : 'Go back')
      }
      accessibilityState={{ disabled }}
      onPress={onPress}
      disabled={disabled}
      style={[
        styles.button,
...
